<resources>
    <string name="app_name">Task_8_finaly</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="no">no</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="searching">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="description_of_image_repost">Поделится</string>
    <string name="description_of_image_agree">Пользовательское соглашение</string>
    <string name="description_of_image_support">Написать в поддержку</string>
    <string name="yandex_curses">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="email">tchatskaya.alina@yandex.ru</string>
    <string name="title_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_int">Проблемы со связью</string>
    <string name="no_int_sorr">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_hint_text">Введите название трека или исполнителя</string>
    <string name="player">Плеер</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
    <string name="app_reload">Обновить</string>
    <string name="error">Запрос не может быть пустым</string>

</resources>