<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textPlaylist"
            android:text="@string/playlist_maker"
            style = "@style/TextStyleMain"
            android:paddingTop="14dp">
        </TextView>

    </FrameLayout>

    <Button
        android:id="@+id/buttonSearch"
        style="@style/ButtonStyleMain"
        android:text="@string/searching"
        android:textColor="@color/black"
        app:icon="@drawable/light_mode" />


    <Button
        style="@style/ButtonStyleMain"
        android:id="@+id/buttonMedia"
        android:text="@string/media"
        app:icon="@drawable/light_mode1"
        />

    <Button
        android:id="@+id/buttonSetting"
        style="@style/ButtonStyleMain"
        android:layout_marginBottom="@dimen/_28dp"
        android:text="@string/settings"
        app:icon="@drawable/light_mode2"
        />

</LinearLayout>