<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_sett">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_4dp">

        <ImageButton
            android:id="@+id/buttonImage"
            style="@style/ImageMainStyleSettings"
            android:src="@drawable/light_mode3" />

        <TextView
            android:id="@+id/textSetting"
            style="@style/TextStyleSettings"
            android:text="@string/settings"
            android:textSize="@dimen/_22sp"
            android:layout_marginStart="@dimen/_0dp"
            android:paddingVertical="@dimen/_10dp"
            android:fontFamily="@font/ys_display_medium">
        </TextView>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_24dp"
        tools:ignore="UseSwitchCompatOrMaterialXml">
        <Switch
            android:id="@+id/switchDark"
            style = "@style/ImageStyleSettings"
            android:paddingEnd="6dp"
            >
        </Switch>
        <TextView
            android:id="@+id/textDark"
            android:text="@string/dark_mode"
            style="@style/TextStyleSettings">
        </TextView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textRepost"
            android:text="@string/share"
            style="@style/TextStyleSettings"
            >
        </TextView>
        <ImageView
            android:id="@+id/imageRepost"
            style = "@style/ImageStyleSettings"
            app:srcCompat="@drawable/light_mode5"
            >
        </ImageView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textSupport"
            style="@style/TextStyleSettings"
            android:textColor="@color/text_sett"
            android:text="@string/support">
        </TextView>
        <ImageView
            android:id="@+id/imageSupport"
            style = "@style/ImageStyleSettings"
            app:srcCompat="@drawable/light_mode7">
        </ImageView>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textRight"
            android:text="@string/terms_of_use"
            style="@style/TextStyleSettings"
            >
        </TextView>
        <ImageView
            android:id="@+id/imageRight"
            style = "@style/ImageStyleSettings"
            app:srcCompat="@drawable/light_mode6"
            >
        </ImageView>
    </FrameLayout>
</LinearLayout>
